--- a/css/style.css
+++ b/css/style.css
@@ -90,69 +90,56 @@ p {
 /* -------------------------------------------------------------------------- */
 
 #menu
-ul
-{
-  font-size: 16px;
-    list-style:none;
-    margin:0;
-    padding:50PX;
-    text-align:center;
+ul {
+font-size:16px;
+list-style:none;
+text-align:center;
 text-transform:uppercase;
 font-family:"Trebuchet MS";
 letter-spacing:4px;
+margin:0;
+padding:50px;
 }
 
-#menu li
-{
-  display:inline;
-     margin:12px;
+#menu li {
+display:inline;
+margin:12px;
 }
 
-  #menu a {
- color: #000;
- cursor: pointer;
- height:25px;
- line-height: 25px;
- text-indent: 10px;
- text-decoration:none;
- width:100%;
+#menu a {
+color:#000;
+cursor:pointer;
+height:25px;
+line-height:25px;
+text-indent:10px;
+text-decoration:none;
+width:100%;
 }
- 
-#menu a:hover{
-/*  text-decoration:underline; */
- color: #A9C5EB;
- font-weight: bold;
+
+#menu a:hover {
+color:#A9C5EB;
+font-weight:700;
 }
- 
+
 #menu li:hover {
-color: #A9C5EB;
- position: relative;
+color:#A9C5EB;
+position:relative;
 }
 
 a {
-  color: #00F;
-  text-decoration: underline;
+color:#00F;
+text-decoration:underline;
 }
 
 a:hover {
-  text-decoration: underline;
+text-decoration:underline;
 }
 
-#upload 
-  {
-width: 400px;
-height: 150px;
-background-color: #CCC;
-margin: 0 auto;
-text-align: left;
-padding: 20px;
-
-
- }
-
-form
-{
-
+#upload {
+width:400px;
+height:150px;
+background-color:#CCC;
+text-align:left;
+margin:0 auto;
+padding:20px;
 }
- 
- 
